update behavior